nuclearbomb/gateway/gateway/internal-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.1.225
  listeners:
    - protocol: HTTP
      port: 80
      name: http
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https
      tls:
        certificateRefs:
          - kind: Secret
            name: hiibolt
            namespace: cert-manager
      allowedRoutes:
        namespaces:
          from: All
